tests/NormalTests/paczka2/big_fuzzy/21758359.err
Error in line 1: dF4 A909 83,6
Error in line 24: dF4 A909 38,9
Error in line 22: bFBWbuO S786 18,0
Error in line 25: dF4 S977 83,4
Error in line 31: opQt0 A7 91,5
Error in line 23: g9vNiZ9fh A909 5,4
Error in line 7: A909 S786 103,6
Error in line 43: A909 S977 59,6
Error in line 42: g9vNiZ9fh A7 14,6
Error in line 55: opQt0 A909 98,0
Error in line 30: bwSeI3FCQ9i S977 237,8
Error in line 61: bwSeI3FCQ9i A909 93,9
Error in line 80: dF4 S977 66,9
Error in line 84: dF4 A7 49,1
Error in line 90: dF4 S977 60,6
Error in line 89: opQt0 A7 58,1
Error in line 97: bFBWbuO S977 83,1
Error in line 105: 7NLmu21ÚRO9 S977 1,8
Error in line 106: dF4 A7 87,5
Error in line 103: bwSeI3FCQ9i S977 90,2
Error in line 124: dF4 S977 73,7
Error in line 125: bwSeI3FCQ9i A909 1,2
Error in line 127: dF4 A7 87,8
Error in line 120: bFBWbuO S786 83,8
Error in line 181: opQt0 S786 29,7
Error in line 166: bFBWbuO A7 171,6
Error in line 171: dF4 A7 31,7
Error in line 183: bFBWbuO S977 82,2
Error in line 196: bwSeI3FCQ9i A7 163,8
Error in line 198: bwSeI3FCQ9i S786 81,3
Error in line 184: dF4 S786 2,7
Error in line 204: bwSeI3FCQ9i S786 30,2
Error in line 197: g9vNiZ9fh S977 10,3
Error in line 216: bwSeI3FCQ9i S786 42,6
Error in line 225: bwSeI3FCQ9i A909 8,1
Error in line 212: bFBWbuO A7 10,4
Error in line 217: g9vNiZ9fh A909 35,3
Error in line 229: bFBWbuO S786 48,9
Error in line 249: opQt0 S786 66,0
